--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; URL='/v7a-client-app'">
+    <meta http-equiv="refresh" content="0; URL='https://d400800.github.io/v7a-client-app/'">
     <title>Redirecting...</title>
 </head>
 <body>
